# narrative-intelligence-agent

./: .replit  README.md  pyproject.toml
political-agent/: README.md  pyproject.toml
political-agent/agent_mcp/: __init__.py  server.py
political-agent/agent_mcp/tools/: __init__.py  calculate_virality_score.py  detect_patterns.py  read_data.py  save_briefing.py  search_narrative.py
political-agent/app/: main_app.py
political-agent/app/components/: __init__.py  results.py  sidebar.py  uploader.py
political-agent/briefings/: briefing_20260627_215619_briefing_test_001.json
political-agent/crew/: __init__.py  data_collector.py  intelligence_reporter.py  narrative_analyst.py  political_crew.py
political-agent/data/: mock_narratives.json
political-agent/graph/: __init__.py  state.py  workflow.py
political-agent/models/: __init__.py  schemas.py
political-agent/prompts/: __init__.py
political-agent/tests/: __init__.py  test_mcp_tools.py  test_workflow.py
