[project]
name = "political-narrative-intelligence-agent"
version = "0.1.0"
description = "Portfolio project: civic intelligence and misinformation monitoring agent"
requires-python = ">=3.11"

dependencies = [
    # Phase 1: Pinned for Phase 2 implementation
    "streamlit>=1.35.0",
    "langgraph>=0.1.0",
    "crewai>=0.30.0",
    "openai>=1.30.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.backends.legacy:build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
